
syntax = "proto3";

package example;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    google.protobuf.Timestamp created_at = 4;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    User user = 2;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    User user = 1;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}
